--- a/app/views/web/loans/index.html.haml
+++ b/app/views/web/loans/index.html.haml
@@ -8,6 +8,14 @@
     = render @loans
 = paginate @loans
 
+.divider-new.wow.fadeIn.mb-0
+  %h2= I18n.t('profit.title.all')
+.container
+  %p
+    = "#{I18n.t('profit.year_income_profit_real')}: #{number_to_percentage Loan.year_income_profit_real, precision: 0}"
+  %p
+    = "#{I18n.t('profit.year_income_profit_optimistic')}: #{number_to_percentage Loan.year_income_profit_optimistic, precision: 0}"
+
 .container
   .row
     .col-lg-12
