--- a/app/views/web/loans/_profit.html.haml
+++ b/app/views/web/loans/_profit.html.haml
@@ -1,3 +1,6 @@
-.container
-  %p
-    = "#{I18n.t('profit.year_income_profit')}: #{number_to_percentage loan.year_income_profit, precision: 0}"
+#loan_profit{class: loan.can_make_more_payments? ? 'd-none' : ''}
+  .divider-new.wow.fadeIn.mb-0
+    %h2= I18n.t('profit.title.loan')
+  .container
+    %p
+      = "#{I18n.t('profit.year_income_profit')}: #{number_to_percentage loan.year_income_profit, precision: 0}"
