--- a/app/views/web/loans/show.html.haml
+++ b/app/views/web/loans/show.html.haml
@@ -10,13 +10,7 @@
   %tbody
     = render @loan.payments
 
-
-#loan_profit{class: @loan.can_make_more_payments? ? 'd-none' : ''}
-  .divider-new.wow.fadeIn.mb-0
-    %h2= I18n.t('profit.title.loan')
-  .container
-    %p
-      = "#{I18n.t('profit.year_income_profit')}: #{number_to_percentage @loan.year_income_profit, precision: 0}"
+= render partial: 'web/loans/profit', locals: { loan: @loan }
 
 - if @loan.can_make_more_payments?
   .container#new_payment_container
